--- a/README
+++ b/README
@@ -13,7 +13,7 @@ INSTALLATION
 1) rhc-create-domain -n domain -l email
 2) rhc-create-app -a collectiveaccess -t php-5.3 -l email 
 3) cd collectiveaccess
-4) git clone git@github.com:bramw/openshiftcollectiveaccess.git
+4) git pull git@github.com:bramw/openshiftcollectiveaccess.git 
 5) rhc-ctl-app -a collectiveaccess -e add-mysql-5.1 -l email  
 6) cd collectiveaccess/php and edit setup.php with database configuration from step 4 and change timezone and admin e-mail
 	define("__CA_DB_HOST__", "DB host");
