--- a/README
+++ b/README
@@ -14,7 +14,7 @@ INSTALLATION
 2) rhc-create-app -a collectiveaccess -t php-5.3 -l email 
 3) cd collectiveaccess
 4) git pull git@github.com:bramw/openshiftcollectiveaccess.git 
-5) rhc-ctl-app -a collect2 -e add-cron-1.4 -l email 
+5) rhc-ctl-app -a collectiveaccess -e add-cron-1.4 -l email 
 6) Rhc-ctl-app -a collectiveaccess -e add-mysql-5.1 -l email  
 7) cd php and edit setup.php with database configuration from step 6 and change timezone and admin e-mail
 	define("__CA_DB_HOST__", "DB host");
