--- a/README
+++ b/README
@@ -13,7 +13,8 @@ INSTALLATION
 1) rhc-create-domain -n domain -l email
 2) rhc-create-app -a collectiveaccess -t php-5.3 -l email 
 3) cd collectiveaccess
-4) git pull git@github.com:bramw/openshiftcollectiveaccess.git 
+4) git remote add upstream -m master git@github.com:bramw/openshiftcollectiveaccess.git 
+   git pull -s recursive -X theirs upstream master
 5) rhc-ctl-app -a collectiveaccess -e add-cron-1.4 -l email 
 6) rhc-ctl-app -a collectiveaccess -e add-mysql-5.1 -l email  
 7) cd php and edit setup.php with database configuration from step 6 and change timezone and admin e-mail
