--- a/README
+++ b/README
@@ -15,9 +15,10 @@ INSTALLATION
 3) cd collectiveaccess
 4) git remote add upstream -m master git@github.com:bramw/openshiftcollectiveaccess.git 
 5) git pull -s recursive -X theirs upstream master
-6) rhc-ctl-app -a collectiveaccess -e add-cron-1.4 -l email 
-7) rhc-ctl-app -a collectiveaccess -e add-mysql-5.1 -l email  
-8) cd php and edit setup.php with database configuration from step 6 and change timezone and admin e-mail
+6) git push
+7) rhc-ctl-app -a collectiveaccess -e add-cron-1.4 -l email 
+8) rhc-ctl-app -a collectiveaccess -e add-mysql-5.1 -l email  
+8) cd php and edit setup.php with database configuration from step 8 and the help file : http://collectiveaccess-domain.rhcloud.com/help.php 
 	define("__CA_DB_HOST__", "DB host");
 	define("__CA_DB_USER__", "admin");
 	define("__CA_DB_PASSWORD__", "DB Password");
@@ -27,4 +28,4 @@ INSTALLATION
 9) git add setup.php
 10) git commit -m "setup.php"
 11) git push
-1222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222) Finish CollectiveAccess installation on http://collectiveaccess-domain.rhcloud.com/install (change domain in domain from step 1)
+12) Finish CollectiveAccess installation on http://collectiveaccess-domain.rhcloud.com/install (change domain in domain from step 1)
